fix align in popup

--- a/src/Scss/Components/projects.scss
+++ b/src/Scss/Components/projects.scss
@@ -328,6 +328,7 @@
       font-size: 12px;
       color: $purple00;
       line-height: 15px;
+      padding-right: 7px;
     }
     .tab-body-project{
       display: flex;
